# nephq2-game

./: CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters  README.md  g_ai.c  g_ctf.c  g_func.c  g_local.h  g_lock.c  g_main.c  g_misc.c  g_phys.c  g_save.c  g_spawn.c  g_target.c  g_trigger.c  g_turret.c  g_utils.c
acesrc/: acebot_compress.c  acebot_nodes.c
monster/: m_actor.c  m_move.c
player/: p_client.c  p_hud.c  p_menu.c  p_text.c  p_text.h  p_weapon.c
tables/: gamefunc_decs.h
